Skip to content
GitLab
  • Menu
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 982
    • Issues 982
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 125
    • Merge requests 125
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #677
Closed
Open
Created Mar 29, 2018 by Bugzilla Migration User@bugzilla-migration

GstDtlsConnection throws a warning every minute

Submitted by Andreas Frisch @fraxinas

Link to original bug (#794800)

Description

During a WebRTC session, we've encountered

dtlsconnection gstdtlsconnection.c:747:openssl_poll:GstDtlsConnection@0x7fb63c0aa160 do_handshake encountered BIO error

after 15, 30, 60 seconds and then every minute.

further digging shows that the BIO read gets an EOF and the SSL syscall errno is actually 0 (success) and the error queue is empty.

it may indicate that the peer simply terminated the TCP connection.
maybe something goes wrong with rtcp here, or is this intentional behaviour?

Assignee
Assign to
Time tracking